--- a/index.html
+++ b/index.html
@@ -54,6 +54,27 @@
             background-color: #fff;
             display: none;
         }
+        .theme-toggle {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            padding: 10px;
+            cursor: pointer;
+        }
+        .dark-theme {
+            background-color: #333;
+            color: #fff;
+        }
+        .dark-theme .container {
+            border-color: #fff;
+        }
+        .dark-theme .shop-item {
+            border-color: #fff;
+        }
+        .dark-theme #dialog {
+            background-color: #444;
+            color: #fff;
+        }
     </style>
 </head>
 <body>
@@ -68,6 +89,7 @@
         </div>
     </div>
     <div id="dialog"></div>
+    <div class="theme-toggle" id="themeToggle">Toggle Theme</div>
 
     <script src="script.js"></script>
 </body>
