--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
             position: absolute;
             top: 10px;
             right: 10px;
+            display: flex;
+            gap: 10px;
+        }
+        .theme-toggle button {
             padding: 10px;
             cursor: pointer;
         }
@@ -75,9 +79,37 @@
             background-color: #444;
             color: #fff;
         }
+        .light-theme {
+            background-color: #fff;
+            color: #000;
+        }
+        .light-theme .container {
+            border-color: #000;
+        }
+        .light-theme .shop-item {
+            border-color: #000;
+        }
+        .light-theme #dialog {
+            background-color: #fff;
+            color: #000;
+        }
+        .yellow-theme {
+            background-color: #ffeb3b;
+            color: #000;
+        }
+        .yellow-theme .container {
+            border-color: #000;
+        }
+        .yellow-theme .shop-item {
+            border-color: #000;
+        }
+        .yellow-theme #dialog {
+            background-color: #fff176;
+            color: #000;
+        }
     </style>
 </head>
-<body>
+<body class="light-theme">
     <div class="container">
         <div id="counter">0</div>
         <button id="clickButton">Click Me!</button>
@@ -89,7 +121,11 @@
         </div>
     </div>
     <div id="dialog"></div>
-    <div class="theme-toggle" id="themeToggle">Toggle Theme</div>
+    <div class="theme-toggle">
+        <button id="darkThemeButton">Dark Theme</button>
+        <button id="lightThemeButton">Light Theme</button>
+        <button id="yellowThemeButton">Yellow Theme</button>
+    </div>
 
     <script src="script.js"></script>
 </body>
