--- a/index.html
+++ b/index.html
@@ -55,13 +55,21 @@
             display: none;
         }
         .theme-toggle {
+            display: flex;
+            gap: 10px;
+            margin-top: 20px;
+        }
+        .theme-toggle button {
+            padding: 10px;
+            cursor: pointer;
+        }
+        .theme-bottom {
             position: absolute;
-            top: 10px;
-            right: 10px;
+            bottom: 10px;
             display: flex;
             gap: 10px;
         }
-        .theme-toggle button {
+        .theme-bottom button {
             padding: 10px;
             cursor: pointer;
         }
@@ -110,9 +118,14 @@
             <div class="shop-item" data-upgrade="3">Upgrade 3 (+10 per click) - 100 points</div>
             <div class="shop-item" data-upgrade="autoclicker">Autoclicker (500 points, 5 min)</div>
         </div>
+        <div class="theme-toggle">
+            <button data-theme="dark-theme">Dark Theme</button>
+            <button data-theme="light-theme">Light Theme</button>
+            <button data-theme="yellow-theme">Yellow Theme</button>
+        </div>
     </div>
     <div id="dialog"></div>
-    <div class="theme-toggle">
+    <div class="theme-bottom">
         <button data-theme="dark-theme">Dark Theme</button>
         <button data-theme="light-theme">Light Theme</button>
         <button data-theme="yellow-theme">Yellow Theme</button>
