--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=720, initial-scale=1.0">
     <title>Clicker Game</title>
     <style>
+        body, html {
             margin: 0;
             padding: 0;
             display: flex;
@@ -21,6 +22,8 @@
             align-items: center;
             justify-content: center;
             border: 1px solid #000;
+            width: 720px;
+            height: 1280px;
             box-sizing: border-box;
             position: relative;
         }
