--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
             border: 1px solid #000;
             width: 720px;
             height: 1280px;
-            box-sizing: border-box;
-            position: relative;
         }
+            #counter {
+            font-size: 2em;
+            margin: 20px;
         }
         #clickButton {
             padding: 20px;
