--- a/index.html
+++ b/index.html
@@ -5,54 +5,74 @@
     <meta name="viewport" content="width=720, initial-scale=1.0">
     <title>Clicker Game</title>
     <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100%;
-            background-color: #fff;
-            color: #000;
-            font-family: Arial, sans-serif;
-        }
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            width: 720px;
-            height: 1280px;
-        }
-        #clickButton {
-            padding: 20px;
-            font-size: 2em;
-            margin: 20px 0;
-        }
-        #shopButton {
-            padding: 10px;
-            font-size: 1.5em;
-            margin: 20px 0;
-            cursor: pointer;
-        }
-        .shop {
-            display: none;
-            flex-direction: column;
-            align-items: center;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: #fff;
-            padding: 20px;
-            border: 1px solid;
-        }
-        .shop-item {
-            margin: 10px;
-            padding: 10px;
-            border: 1px solid;
-            cursor: pointer;
-        }
+        body {
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    max-width: 720px;
+    margin: 20px auto;
+    padding: 10px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#counter {
+    font-size: 48px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.button-container {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 20px;
+}
+
+.btn {
+    padding: 10px 20px;
+    font-size: 18px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.btn:hover {
+    background-color: #45a049;
+}
+
+.shop {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    border: 1px solid #ccc;
+    max-width: 90%;
+    max-height: 90%;
+    overflow-y: auto;
+    z-index: 9999; /* Помещает окно магазина поверх других элементов */
+}
+
+.shop-item {
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.shop-item:hover {
+    background-color: #f0f0f0;
+}
         #dialog {
             position: absolute;
             top: 50%;
