--- a/index.html
+++ b/index.html
@@ -153,19 +153,14 @@
             <div class="shop-item" data-upgrade="autoclicker-speed">Increase Autoclicker Speed (+1 click/sec) - 100 points</div>
             <div class="shop-item" data-upgrade="autoclicker-coins">Increase Autoclicker Coins (+2 coins/click) - 150 points</div>
         </div>
-        <div class="theme-toggle">
-            <button data-theme="dark-theme">Dark Theme</button>
-            <button data-theme="light-theme">Light Theme</button>
-            <button data-theme="yellow-theme">Yellow Theme</button>
-        </div>
     </div>
     <div id="dialog"></div>
     <div class="theme-bottom">
         <button data-theme="dark-theme">Dark Theme</button>
         <button data-theme="light-theme">Light Theme</button>
         <button data-theme="yellow-theme">Yellow Theme</button>
+        <button id="resetButton" style="top: 10px; right: 10px;">Reset Game</button>
     </div>
-    <button id="resetButton" style="position: absolute; top: 10px; right: 10px;">Reset Game</button>
     <script src="script.js"></script>
 </body>
 </html>
