--- a/index.html
+++ b/index.html
@@ -6,27 +6,18 @@
     <title>Clicker Game</title>
     <style>
         body {
-         margin: 0;
-            padding: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100%;
-            background-color: #fff;
-            color: #000;
-            font-family: Arial, sans-serif;
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
+    margin: 0;
+    padding: 0;
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid #000;
-    width: 720px;
-    height: 1280px;
-    box-sizing: border-box;
-    position: relative;
+    max-width: 720px;
+    margin: 20px auto;
+    padding: 10px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 #counter {
