--- a/index.html
+++ b/index.html
@@ -3,72 +3,210 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Технические работы</title>
+    <title>Игра Кликер</title>
     <style>
-        body, html {
-            height: 100%;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #f3f3f3;
-        }
-        .container {
-            width: 720px;
-            height: 1280px;
-            background-color: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        body {
+            background-color: #f0f0f0;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             display: flex;
             flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+            color: #333;
+        }
+        #coins {
+            font-size: 3em;
+            font-weight: bold;
+            margin: 20px;
+            background: linear-gradient(90deg, #ff0000, #ff9900, #ffff00, #33cc33, #00ccff, #cc33ff);
+            -webkit-background-clip: text;
+            color: transparent;
+            animation: gradient 3s ease-in-out infinite;
+        }
+        @keyframes gradient {
+            0%, 100% {
+                background-position: 0% 50%;
+            }
+            50% {
+                background-position: 100% 50%;
+            }
+        }
+        #clicker {
+            font-size: 2em;
+            margin: 20px;
+            padding: 20px 40px;
+            border: 2px solid #4CAF50;
+            background-color: #4CAF50;
+            color: white;
+            border-radius: 10px;
+            cursor: pointer;
+            transition: transform 0.1s, background-color 0.3s;
+            user-select: none;
+        }
+        #clicker:active {
+            transform: scale(0.95);
+        }
+        #shop, #reset, #gifts {
+            margin: 10px;
+            padding: 10px 20px;
+            border: 2px solid #4CAF50;
+            background-color: #4CAF50;
+            color: white;
+            border-radius: 10px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        #shop:hover, #reset:hover, #gifts:hover {
+            background-color: #45a049;
+        }
+        .timer {
+            margin-top: 10px;
+            font-size: 1em;
+            color: #555;
+        }
+        #shopModal, #giftsModal, #offlineEarningsModal, #resetWarningModal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
             justify-content: center;
             align-items: center;
-            text-align: center;
-            padding: 20px;
-            box-sizing: border-box;
+            animation: fadeIn 0.5s;
         }
-        #timer {
-            font-size: 2em;
-            margin-top: 20px;
+        #shopModalContent, #giftsModalContent, #offlineEarningsModalContent, #resetWarningModalContent {
+            position: relative;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            animation: slideIn 0.5s;
+        }
+        .closeModal {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background: none;
+            border: none;
+            font-size: 1.5em;
+            cursor: pointer;
+            color: #aaa;
+            transition: color 0.3s;
+        }
+        .closeModal:hover {
+            color: #333;
+        }
+        .shop-item {
+            margin: 10px 0;
+            display: flex;
+            justify-content: space-between;
+        }
+        .shop-item button {
+            margin-left: 10px;
+            padding: 5px 10px;
+            border: 2px solid #4CAF50;
+            background-color: #4CAF50;
+            color: white;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        .shop-item button:hover {
+            background-color: #45a049;
+        }
+        #codeInput {
+            margin-right: 10px;
+            padding: 5px;
+            border: 2px solid #4CAF50;
+            border-radius: 5px;
+        }
+        #codeSubmit, #claimBonus, #closeOfflineEarnings, #closeResetWarning {
+            padding: 5px 10px;
+            border: 2px solid #4CAF50;
+            background-color: #4CAF50;
+            color: white;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+            margin-top: 10px;
+        }
+        #codeSubmit:hover, #claimBonus:hover, #closeOfflineEarnings:hover, #closeResetWarning:hover {
+            background-color: #45a049;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        @keyframes slideIn {
+            from { transform: translateY(-20px); }
+            to { transform: translateY(0); }
+        }
+        @keyframes slideOut {
+            from { transform: translateY(0); }
+            to { transform: translateY(-20px); }
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Извините, ведутся технические работы</h1>
-        <p>Пожалуйста, подождите. Работы будут завершены через:</p>
-        <div id="timer"></div>
+    <div id="coins">0</div>
+    <div id="clicker">Кликни меня!</div>
+    <button id="shop">Магазин</button>
+    <button id="reset">Сброс</button>
+    <button id="gifts">Подарки</button>
+
+    <div id="shopModal">
+        <div id="shopModalContent">
+            <button class="closeModal" onclick="closeShopModal()">×</button>
+            <div class="shop-item">
+                <span>Автокликер (стоимость: 10 монет)</span>
+                <button onclick="buyAutoClicker()">Купить</button>
+            </div>
+            <div class="shop-item">
+                <span>Улучшение автокликера (стоимость: 20 монет)</span>
+                <button onclick="upgradeAutoClicker()">Купить</button>
+            </div>
+            <div class="shop-item">
+                <span>Увеличение стоимости клика (стоимость: 15 монет)</span>
+                <button onclick="increaseClickValue()">Купить</button>
+            </div>
+            <div class="shop-item">
+                <span>Удвоение эффективности автокликера (стоимость: 30 монет)</span>
+                <button onclick="doubleAutoClickerEfficiency()">Купить</button>
+            </div>
+        </div>
     </div>
-    
-    <script>
-        // Установить время окончания в Local Storage
-        if (!localStorage.getItem('endTime')) {
-            const endTime = new Date().getTime() + 2 * 60 * 60 * 1000; // через 2 часа
-            localStorage.setItem('endTime', endTime);
-        }
 
-        const timerElement = document.getElementById('timer');
+    <div id="giftsModal">
+        <div id="giftsModalContent">
+            <button class="closeModal" onclick="closeGiftsModal()">×</button>
+            <button id="claimBonus">Получить бонус</button>
+            <div class="timer">До следующего бонуса: <span id="bonusTimer">00:00:00</span></div>
+            <input type="text" id="codeInput" placeholder="Введите код">
+            <button id="codeSubmit">Активировать</button>
+            <div class="timer">До следующего кода: <span id="codeTimer">00:00:00</span></div>
+        </div>
+    </div>
 
-        function updateTimer() {
-            const now = new Date().getTime();
-            const endTime = localStorage.getItem('endTime');
-            const timeLeft = endTime - now;
+    <div id="offlineEarningsModal">
+        <div id="offlineEarningsModalContent">
+            <button class="closeModal" onclick="closeOfflineEarningsModal()">×</button>
+            <div id="offlineEarningsMessage"></div>
+            <button id="closeOfflineEarnings">Закрыть</button>
+        </div>
+    </div>
 
-            if (timeLeft < 0) {
-                timerElement.textContent = "Работы завершены!";
-                localStorage.removeItem('endTime');
-                return;
-            }
+    <div id="resetWarningModal">
+        <div id="resetWarningModalContent">
+            <button class="closeModal" onclick="closeResetWarningModal()">×</button>
+            <div>Внимание! Идет сброс! Подождите...</div>
+            <button id="closeResetWarning">Закрыть</button>
+        </div>
+    </div>
 
-            const hours = Math.floor((timeLeft % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-            const minutes = Math.floor((timeLeft % (1000 * 60 * 60)) / (1000 * 60));
-            const seconds = Math.floor((timeLeft % (1000 * 60)) / 1000);
-
-            timerElement.textContent = `${hours}ч ${minutes}м ${seconds}с`;
-
-            setTimeout(updateTimer, 1000);
-        }
-
-        updateTimer();
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
