--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
                 <span>Увеличение стоимости клика (стоимость: 15 монет)</span>
                 <button onclick="increaseClickValue()">Купить</button>
             </div>
-            <div class="shop-item">
+<!--             <div class="shop-item">
                 <span>Удвоение эффективности автокликера (стоимость: 30 монет)</span>
                 <button onclick="doubleAutoClickerEfficiency()">Купить</button>
-            </div>
+            </div> -->
         </div>
     </div>
 
