--- a/index.html
+++ b/index.html
@@ -162,21 +162,21 @@
         <div id="shopModalContent">
             <button class="closeModal" onclick="closeShopModal()">×</button>
             <div class="shop-item">
-                <span>Автокликер (стоимость: 10 монет)</span>
+                <span>Автокликер (стоимость: 500 монет)</span>
                 <button onclick="buyAutoClicker()">Купить</button>
             </div>
             <div class="shop-item">
-                <span>Улучшение автокликера (стоимость: 20 монет)</span>
+                <span>Улучшение автокликера (стоимость: 250 монет)</span>
                 <button onclick="upgradeAutoClicker()">Купить</button>
             </div>
             <div class="shop-item">
-                <span>Увеличение стоимости клика (стоимость: 15 монет)</span>
+                <span>Увеличение стоимости клика (стоимость: 100 монет)</span>
                 <button onclick="increaseClickValue()">Купить</button>
             </div>
-<!--             <div class="shop-item">
-                <span>Удвоение эффективности автокликера (стоимость: 30 монет)</span>
+             <div class="shop-item">
+                <span>Удвоение эффективности автокликера (стоимость: 5000 монет)</span>
                 <button onclick="doubleAutoClickerEfficiency()">Купить</button>
-            </div> -->
+            </div> 
         </div>
     </div>
 
