--- a/index.html
+++ b/index.html
@@ -16,6 +16,47 @@
             margin: 0;
             color: #333;
         }
+        #splashScreen {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #fff;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            z-index: 10;
+        }
+        #splashScreen h1 {
+            margin: 0;
+            font-size: 3em;
+        }
+        #loadingBarContainer {
+            width: 80%;
+            background-color: #ddd;
+            border-radius: 25px;
+            margin: 20px 0;
+        }
+        #loadingBar {
+            width: 0;
+            height: 30px;
+            background-color: #4CAF50;
+            border-radius: 25px;
+        }
+        #version {
+            position: absolute;
+            bottom: 20px;
+            font-size: 1em;
+            color: #888;
+        }
+        #time {
+            position: absolute;
+            top: 20px;
+            font-size: 1.5em;
+            color: #888;
+        }
         #coins {
             font-size: 3em;
             font-weight: bold;
@@ -66,7 +107,7 @@
             font-size: 1em;
             color: #555;
         }
-        #shopModal, #giftsModal, #offlineEarningsModal, #resetWarningModal {
+        #shopModal, #giftsModal, #offlineEarningsModal {
             display: none;
             position: fixed;
             top: 0;
@@ -78,7 +119,7 @@
             align-items: center;
             animation: fadeIn 0.5s;
         }
-        #shopModalContent, #giftsModalContent, #offlineEarningsModalContent, #resetWarningModalContent {
+        #shopModalContent, #giftsModalContent, #offlineEarningsModalContent {
             position: relative;
             background: white;
             padding: 20px;
@@ -124,7 +165,7 @@
             border: 2px solid #4CAF50;
             border-radius: 5px;
         }
-        #codeSubmit, #claimBonus, #closeOfflineEarnings, #closeResetWarning {
+        #codeSubmit, #claimBonus, #closeOfflineEarnings {
             padding: 5px 10px;
             border: 2px solid #4CAF50;
             background-color: #4CAF50;
@@ -134,7 +175,7 @@
             transition: background-color 0.3s;
             margin-top: 10px;
         }
-        #codeSubmit:hover, #claimBonus:hover, #closeOfflineEarnings:hover, #closeResetWarning:hover {
+        #codeSubmit:hover, #claimBonus:hover, #closeOfflineEarnings:hover {
             background-color: #45a049;
         }
         @keyframes fadeIn {
@@ -152,6 +193,14 @@
     </style>
 </head>
 <body>
+    <div id="splashScreen">
+        <div id="time"></div>
+        <h1>Добро пожаловать!</h1>
+        <div id="loadingBarContainer">
+            <div id="loadingBar"></div>
+        </div>
+        <div id="version">beta0.1</div>
+    </div>
     <div id="coins">0</div>
     <div id="clicker">Кликни меня!</div>
     <button id="shop">Магазин</button>
@@ -173,10 +222,10 @@
                 <span>Увеличение стоимости клика (стоимость: 100 монет)</span>
                 <button onclick="increaseClickValue()">Купить</button>
             </div>
-             <div class="shop-item">
+            <div class="shop-item">
                 <span>Удвоение эффективности автокликера (стоимость: 5000 монет)</span>
                 <button onclick="doubleAutoClickerEfficiency()">Купить</button>
-            </div> 
+            </div>
         </div>
     </div>
 
@@ -198,15 +247,6 @@
             <button id="closeOfflineEarnings">Закрыть</button>
         </div>
     </div>
-
-    <div id="resetWarningModal">
-        <div id="resetWarningModalContent">
-            <button class="closeModal" onclick="closeResetWarningModal()">×</button>
-            <div>Внимание! Идет сброс! Подождите...</div>
-            <button id="closeResetWarning">Закрыть</button>
-        </div>
-    </div>
-
     <script src="script.js"></script>
 </body>
 </html>
