--- a/index.html
+++ b/index.html
@@ -3,258 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Игра Кликер</title>
-    <style>
-        body {
-            background-color: #f0f0f0;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-            color: #333;
-        }
-        #splashScreen {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: #fff;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            z-index: 10;
-            transition: opacity 0.5s;
-        }
-        #splashScreen h1 {
-            margin: 0;
-            font-size: 3em;
-        }
-        #loadingBarContainer {
-            width: 80%;
-            background-color: #ddd;
-            border-radius: 25px;
-            margin: 20px 0;
-        }
-        #loadingBar {
-            width: 0;
-            height: 30px;
-            background-color: #4CAF50;
-            border-radius: 25px;
-            transition: width 30s linear;
-        }
-        #version {
-            position: absolute;
-            bottom: 20px;
-            font-size: 1em;
-            color: #888;
-        }
-        #time {
-            position: absolute;
-            top: 20px;
-            font-size: 1.5em;
-            color: #888;
-        }
-        #coins {
-            font-size: 3em;
-            font-weight: bold;
-            margin: 20px;
-            background: linear-gradient(90deg, #ff0000, #ff9900, #ffff00, #33cc33, #00ccff, #cc33ff);
-            -webkit-background-clip: text;
-            color: transparent;
-            animation: gradient 3s ease-in-out infinite;
-        }
-        @keyframes gradient {
-            0%, 100% {
-                background-position: 0% 50%;
-            }
-            50% {
-                background-position: 100% 50%;
-            }
-        }
-        #clicker {
-            font-size: 2em;
-            margin: 20px;
-            padding: 20px 40px;
-            border: 2px solid #4CAF50;
-            background-color: #4CAF50;
-            color: white;
-            border-radius: 10px;
-            cursor: pointer;
-            transition: transform 0.1s, background-color 0.3s;
-            user-select: none;
-        }
-        #clicker:active {
-            transform: scale(0.95);
-        }
-        #shop, #reset, #gifts {
-            margin: 10px;
-            padding: 10px 20px;
-            border: 2px solid #4CAF50;
-            background-color: #4CAF50;
-            color: white;
-            border-radius: 10px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-        #shop:hover, #reset:hover, #gifts:hover {
-            background-color: #45a049;
-        }
-        .timer {
-            margin-top: 10px;
-            font-size: 1em;
-            color: #555;
-        }
-        #shopModal, #giftsModal, #offlineEarningsModal {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.5);
-            justify-content: center;
-            align-items: center;
-            animation: fadeIn 0.5s;
-        }
-        #shopModalContent, #giftsModalContent, #offlineEarningsModalContent {
-            position: relative;
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            animation: slideIn 0.5s;
-        }
-        .closeModal {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            background: none;
-            border: none;
-            font-size: 1.5em;
-            cursor: pointer;
-            color: #aaa;
-            transition: color 0.3s;
-        }
-        .closeModal:hover {
-            color: #333;
-        }
-        .shop-item {
-            margin: 10px 0;
-            display: flex;
-            justify-content: space-between;
-        }
-        .shop-item button {
-            margin-left: 10px;
-            padding: 5px 10px;
-            border: 2px solid #4CAF50;
-            background-color: #4CAF50;
-            color: white;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-        .shop-item button:hover {
-            background-color: #45a049;
-        }
-        #codeInput {
-            margin-right: 10px;
-            padding: 5px;
-            border: 2px solid #4CAF50;
-            border-radius: 5px;
-        }
-        #codeSubmit, #claimBonus, #closeOfflineEarnings {
-            padding: 5px 10px;
-            border: 2px solid #4CAF50;
-            background-color: #4CAF50;
-            color: white;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-            margin-top: 10px;
-        }
-        #codeSubmit:hover, #claimBonus:hover, #closeOfflineEarnings:hover {
-            background-color: #45a049;
-        }
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-        @keyframes slideIn {
-            from { transform: translateY(-20px); }
-            to { transform: translateY(0); }
-        }
-        @keyframes slideOut {
-            from { transform: translateY(0); }
-            to { transform: translateY(-20px); }
-        }
-    </style>
+    <title>Страница технических работ</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="splashScreen">
-        <div id="time"></div>
-        <h3>Добро пожаловать!</h3>
-        <h1>Подождите...</h1>
-        <h3>Это нам поможет разгрузить очередь</h3>
-        <div id="loadingBarContainer">
-            <div id="loadingBar"></div>
-        </div>
-        <div id="version">beta0.1</div>
-    </div>
-    <div id="coins">0</div>
-    <div id="clicker">Кликни меня!</div>
-    <button id="shop">Магазин</button>
-    <button id="reset">Сброс</button>
-    <button id="gifts">Подарки</button>
-
-    <div id="shopModal">
-        <div id="shopModalContent">
-            <button class="closeModal" onclick="closeShopModal()">×</button>
-            <div class="shop-item">
-                <span>Автокликер (стоимость: 500 монет)</span>
-                <button onclick="buyAutoClicker()">Купить</button>
-            </div>
-            <div class="shop-item">
-                <span>Улучшение автокликера (стоимость: 250 монет)</span>
-                <button onclick="upgradeAutoClicker()">Купить</button>
-            </div>
-            <div class="shop-item">
-                <span>Увеличение стоимости клика (стоимость: 100 монет)</span>
-                <button onclick="increaseClickValue()">Купить</button>
-            </div>
-            <div class="shop-item">
-                <span>Удвоение эффективности автокликера (стоимость: 5000 монет)</span>
-                <button onclick="doubleAutoClickerEfficiency()">Купить</button>
-            </div>
-        </div>
-    </div>
-
-    <div id="giftsModal">
-        <div id="giftsModalContent">
-            <button class="closeModal" onclick="closeGiftsModal()">×</button>
-            <button id="claimBonus">Получить бонус</button>
-            <div class="timer">До следующего бонуса: <span id="bonusTimer">00:00:00</span></div>
-            <input type="text" id="codeInput" placeholder="Введите код">
-            <button id="codeSubmit">Активировать</button>
-            <div class="timer">До следующего кода: <span id="codeTimer">00:00:00</span></div>
-        </div>
-    </div>
-
-    <div id="offlineEarningsModal">
-        <div id="offlineEarningsModalContent">
-            <button class="closeModal" onclick="closeOfflineEarningsModal()">×</button>
-            <div id="offlineEarningsMessage"></div>
-            <button id="closeOfflineEarnings">Закрыть</button>
-        </div>
-    </div>
-
-    <div id="resetWarningModal">
-        <div id="resetWarningModalContent">
-            <button class="closeModal" onclick="closeResetWarningModal()">×</button>
+    <div class="container">
+        <div class="maintenance">
+            <h1>Сайт на техническом обслуживании</h1>
+            <p>Мы приносим свои извинения за неудобства. Пожалуйста, попробуйте зайти позже.</p>
+            <p id="countdown"></p>
         </div>
     </div>
     <script src="script.js"></script>
