--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="maintenance">
             <h1>Сайт на техническом обслуживании</h1>
             <p>Мы приносим свои извинения за неудобства. Пожалуйста, попробуйте зайти позже.</p>
-            <p id="countdown"></p>
+<!--             <p id="countdown"></p> -->
         </div>
     </div>
     <script src="script.js"></script>
